# index_calculator

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .yamllint.yaml  .zenodo.json  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release-pypi.yaml  testpypi-release.yaml
ci/requirements/: docs.yml  environment.yml  requirements.txt  requirements_dev.txt
docs/: Makefile  api.rst  conf.py  index.rst  indices.rst  installation.rst  make.bat  newindex.rst  newproject.rst  notebooks.nblink  usage.rst
docs/notebooks/: TG_computation.ipynb
index_calculator/: __init__.py  _ci_netcdfattrs.py  _climate_indicator.py  _consts.py  _data.py  _indices.py  _outputwriter.py  _postprocessing.py  _preprocessing.py  _processing.py  _tables.py  _utils.py  _variable_conversion.py  cli.py  index_calculator.py
index_calculator/tables/: cf_conversion.json  convert_to_daily.json  convert_to_frequencies.json  convert_to_frequency.json  indices.json  input_vars.json  metadata.json  projects.json  xcalc.json
notebooks/: DD_computation.ipynb  TG_computation.ipynb  ci_netcdfattributes.py  how_to_calculate_scd.ipynb  index_calculator.ipynb
tables/: indices.json  institutions.json  projects.json  xcalc.json
tests/: __init__.py  conftest.py  test_cli.py  test_index_calculator.py  test_indices.py  test_utils.py  test_xcalc.py
